# libaudio_pipeline

./: Makefile  README.md  com.txt  env  my.tex  pcmin  write.pcm
audio_test/: audio_element_test.c  audio_event_iface_test.c  audio_mem_test.c  audio_pipeline_test.c  audio_test.h  audio_test_main.c  fatfs_stream_test.c  http_stream_test.c  mp3_decoder_test.c  pcm_stream_test.c  pcmout
libaudio/: BUILD.gn
libaudio/components/audio_pipeline/: audio_element.c  audio_event_iface.c  audio_pipeline.c  ringbuf.c
libaudio/components/audio_pipeline/include/: audio_common.h  audio_element.h  audio_event_iface.h  audio_pipeline.h  ringbuf.h
libaudio/components/audio_sal/: audio_mem.c  audio_mutex.c  audio_queue.c  audio_thread.c  audio_url.c  event_groups.c
libaudio/components/audio_sal/include/: audio_error.h  audio_mutex.h  audio_queue.h  audio_thread.h  event_groups.h
libaudio/components/audio_stream/: fatfs_stream.c  http_stream.c  pcm_stream.c
libaudio/components/audio_stream/include/: http_stream.h  pcm_stream.h
libaudio/components/eswin-adf-libs/eswin_codec/include/codec/: audio_type_def.h  auto_mp3_dec.h  mp3_decoder.h
libaudio/components/eswin-adf-libs/eswin_codec/include/processing/: wav_head.h
libaudio/components/eswin-adf-libs/eswin_codec/lib/codec/: mp3_decode.c
libaudio/components/eswin-adf-libs/eswin_codec/lib/codec/soft_decoder/mp3/include/: coder.h  mp3common.h  mp3dec.h  mpadecobjfixpt.h
libaudio/components/eswin-adf-libs/eswin_codec/lib/codec/soft_decoder/mp3/src/: bitstream.c  dqchan.c  huffman.c  imdct.c  mp3dec.c
libaudio/components/eswin-adf-libs/eswin_codec/lib/processing/: wav_head.c
libaudio/idf_components/esp_common/include/: portmacro.h  sdkconfig.h
libaudio/idf_components/esp_http_client/: esp_http_client.c
libaudio/idf_components/esp_http_client/include/: esp_http_client.h
libaudio/idf_components/log/include/: esp_log.h
